setting tabSize to 2

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -8,5 +8,6 @@
     "php.validate.executablePath": "/usr/local/bin/php",
     "php.validate.run": "onSave",
     "terminal.integrated.shellArgs.linux": ["-l"],
-    "terminal.integrated.shellArgs.osx": ["-l"]
+    "terminal.integrated.shellArgs.osx": ["-l"],
+    "editor.tabSize": 2
 }
