--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -8,5 +8,10 @@
     "php.validate.executablePath": "/usr/local/bin/php",
     "php.validate.run": "onSave",
     "terminal.integrated.shellArgs.linux": ["-l"],
-    "terminal.integrated.shellArgs.osx": ["-l"]
+    "terminal.integrated.shellArgs.osx": [
+        "-l"
+    ],
+    "window.zoomLevel": 1,
+    "workbench.colorTheme": "Visual Studio Light",
+    "terraform.formatOnSave": true
 }
