--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -24,5 +24,6 @@
         "-p",
         "*_test.py"
     ],
-    "python.unitTest.unittestEnabled": true   
+    "python.unitTest.unittestEnabled": true,
+    "editor.minimap.enabled": true
 }
