--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -33,6 +33,6 @@
     "editor.minimap.enabled": false,
     "workbench.iconTheme":"vs-seti",
     "editor.renderWhitespace": "boundary",
-    "go.lintOnSave": true
-
+    "go.lintOnSave": true,
+    "git.enableSmartCommit": true
 }
