--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -31,9 +31,10 @@
     "python.unitTest.pyTestEnabled": true,
     "python.unitTest.unittestEnabled": false,
     "python.unitTest.nosetestsEnabled": false, 
+    
     "editor.minimap.enabled": false,
     "workbench.iconTheme":"vs-seti",
     "editor.renderWhitespace": "boundary",
-    "go.lintOnSave": true,
+    "editor.formatOnSave": true,
     "git.enableSmartCommit": true
 }
