--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -13,6 +13,7 @@
     ],
     "window.zoomLevel": 1,
     "terraform.format.enable": true,
+    "python.venvPath": "~/.virtualenvs",
     "python.pythonPath": "/usr/local/bin/python",
     "python.linting.enabled": true,
     "python.linting.pylintArgs": ["--errors-only"],
